# mcp-search-console

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  accounts.example.json  pyproject.toml  server.json
.github/workflows/: ci.yml
docs/: architecture.md  start-here.md
gsc/: __init__.py  accounts.py  retry.py  server.py
gsc/auth/: oauth.py  service_account.py
tests/: test_server.py
