[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-search-console-multi"
version = "0.1.3"
description = "Multi-account Google Search Console MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "google-search-console", "seo", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastmcp>=2.0.0",
    "google-api-python-client>=2.120.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.scripts]
mcp-search-console-multi = "gsc.server:main"

[tool.hatch.build.targets.wheel]
packages = ["gsc"]

[tool.ruff]
line-length = 100
target-version = "py311"
